--- a/styles/notion.css
+++ b/styles/notion.css
@@ -298,15 +298,15 @@
   );
 }
 
-.dark-mode .notion-red_background,
-.dark-mode .notion-pink_background,
-.dark-mode .notion-blue_background,
-.dark-mode .notion-purple_background,
-.dark-mode .notion-teal_background,
-.dark-mode .notion-yellow_background,
-.dark-mode .notion-orange_background,
-.dark-mode .notion-brown_background,
-.dark-mode .notion-gray_background {
+.dark .notion-red_background,
+.dark .notion-pink_background,
+.dark .notion-blue_background,
+.dark .notion-purple_background,
+.dark .notion-teal_background,
+.dark .notion-yellow_background,
+.dark .notion-orange_background,
+.dark .notion-brown_background,
+.dark .notion-gray_background {
   padding: 0;
   margin: 0;
   border-radius: 0;
@@ -340,7 +340,7 @@
   backdrop-filter: saturate(180%) blur(16px);
 }
 
-.dark-mode .notion-header {
+.dark .notion-header {
   background: transparent;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
   backdrop-filter: saturate(180%) blur(8px);
@@ -348,7 +348,7 @@
 
 /* Workaround for Firefox not supporting backdrop-filter yet */
 @-moz-document url-prefix() {
-  .dark-mode .notion-header {
+  .dark .notion-header {
     background: hsla(203, 8%, 20%, 0.8);
   }
 }
